@@ -1,3 +1,5 @@
+2005/10/23 -- released version 20051023_trunk
+
 2005/10/22 -- released version 20051022_trunk
 
 2005/10/21 -- released version 20051021_trunk
